2004-09-07 Alain Magloire

	Part of the uncoming work to supply formatting in CDT
	* src/org/eclipse/cdt/internal/corext/CodeFormatterUtil.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/text/CFormatingStrategy.java
	* src/org/eclipse/cdt/internal/ui/text/CSourceViewerConfiguration.java
	* plugin.properties
	* plugin.xml

2004-09-07 Chris Wiebe

	comment out old class wizard
	* plugin.xml

2004-09-07 Bogdan Gheorghe

	Fix for Bug 73191: Search not finding all references in a specific example
	* src/org/eclipse/cdt/internal/ui/search/CSearchPage.java
	
2004-09-04 Alain Magloire

	Fix for PR 73118
	* refactor/org/eclipse/cdt/internal/ui/refactoring/actions/RenameRefactoringAction.java

2004-09-03 Chris Wiebe

	add support for IDeferredWorkbenchAdapter
	* src/org/eclipse/cdt/internal/ui/CElementAdapterFactory.java
	* src/org/eclipse/cdt/internal/ui/DeferredCWorkbenchAdapter.java

2004-09-03 Alain Magloire

	The Binaries were not showing children.

	* src/org/eclipse/cdt/internal/ui/BaseCElementContentProvider.java

2004-09-03 Alain Magloire

	Provide key binding for AddInclude action
	* src/org/eclipse/cdt/internal/ui/editor/AddIncludeOnSelectionAction.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditor.java
	* src/org/eclipse/cdt/internal/ui/editor/CEditorMessages.properties
	* plugin.xml
	* plugin.properties

2004-09-02 Alain Magloire
	
	Deal with WorkingCopy vs TranslationUnit in the hashCode.
	* src/org/eclipse/cdt/internal/ui/cview/CViewElementComparer.java

2004-09-02 Bogdan Gheorghe
	Fix for 72816: [Search] Selection Search For Working Set
	
	* src/org/eclipse/cdt/internal/ui/search/CSearchUtil.java
	* src/org/eclipse/cdt/internal/ui/search/LRUWorkingSets.java
	* src/org/eclipse/cdt/internal/ui/search/actions/DeclarationsSearchGroup.java
	* src/org/eclipse/cdt/internal/ui/search/actions/FindDeclarationsInWorkingSetAction.java
	* src/org/eclipse/cdt/internal/ui/search/actions/FindRefsInWorkingSetAction.java